made home page more readable, fix clicking

--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,13 @@ html, body {
 }
 
 .text-overlay {
-  width: 500px;
+  width: 400px;
   position: absolute;
   left: 10%;
   top: 30%;
 }
 
-@media (max-width: 960px) {
+@media (max-width: 900px) {
   .container {
     position: relative;
     text-align: center;
@@ -35,9 +35,10 @@ html, body {
   }
 
   .background-image {
-    width: auto;
-    height: calc(100vh - 64px -32px); 
+    width: 100%;
+    height:  calc(100vh - 64px - 32px);
     object-fit: cover;
+    object-position: right;
     margin: auto;
   }
 
@@ -46,5 +47,6 @@ html, body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 1;
   }
 }
